# kh3-ultrawide-patcher

./: .gitignore  AI-TRANSPARENCY.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  build-release.ps1  package-lock.json  package.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  detect.rs  error.rs  lib.rs  main.rs  model.rs  patch.rs  vdf.rs
src/lib/: ipc.ts  presets.ts  types.ts
src/lib/components/: Crown.svelte  GameCard.svelte  KeyholeSpinner.svelte  StatePill.svelte  Stepper.svelte
src/routes/: +layout.svelte  +page.svelte
