[package]
name = "kh3-ultrawide-patcher"
version = "1.0.0"
description = "Ultrawide patcher for KINGDOM HEARTS III (Steam & Epic)"
authors = ["kh3-ultrawide-patcher contributors"]
license = "GPL-3.0-only"
repository = "https://github.com/LordBlacksun/kh3-ultrawide-patcher"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kh3_ultrawide_patcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
memchr = "2"
walkdir = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
